# AutoSolver

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  PROJECT_METHOD_REPORT.md  README.md  README_langchain_agent.md  RELEASE.md  _solver_template.py  autosolver_agent.py  describe.txt  framework.md  generated_submit_solution.py  generated_submit_solution.py.report.json  langchain_autosolver_agent.py  old_generated.py  old_generated.py.report.json  problem.txt  pyproject.toml  requirements.txt  run.sh  score_solution.py  smoke_solution.py  smoke_solution.py.report.json  solver-baseline.py  solver.py  submit_solution.py
.github/workflows/: ci.yml  publish-image.yml
autosolver_agent/: __init__.py  agent.py  artifacts.py  caseio.py  cli.py  events.py  framework.py  json_utils.py  models.py  runtime.py
autosolver_agent/llm/: __init__.py  generator.py  schema.py
autosolver_agent/memory/: __init__.py  store.py
autosolver_agent/skills/: __init__.py  library.py
autosolver_agent/tools/: __init__.py  classifier.py  langchain_tools.py  scorer.py  validator.py
autosolver_agent/workflow/: __init__.py  graph.py  parallel.py  runner.py  services.py
examples/: demo_case.txt  solver_template_1.py
instance/: large_seed301-1.txt
solvers/: __init__.py  seed_solvers.py
tests/: __init__.py  test_modular_agent.py
