[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "autosolver-agent"
version = "1.5.3"
description = "LangGraph/LangChain AutoSolver Agent for delivery assignment solver generation."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "langchain>=1.3.0",
  "langchain-core>=1.4.0",
  "langchain-openai>=1.2.0",
  "langgraph>=1.2.0",
  "pydantic>=2.5",
]

[project.optional-dependencies]
dev = [
  "build>=1.3",
  "coverage[toml]>=7.6",
  "mypy>=1.10",
  "ruff>=0.8",
]

[project.scripts]
autosolver-agent = "autosolver_agent.cli:main"

[tool.setuptools.packages.find]
include = ["autosolver_agent*", "solvers*"]

[tool.ruff]
target-version = "py310"
line-length = 160
extend-exclude = [
  ".venv",
  "runs",
  "examples",
  "solvers",
]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
follow_imports = "silent"
warn_unused_ignores = false
no_strict_optional = true

[tool.coverage.run]
source = ["autosolver_agent"]
omit = [
  ".venv/*",
  "runs/*",
  "tests/*",
]

[tool.coverage.report]
show_missing = true
skip_covered = true
